Bug 389707. Rework text-transform:capitalize by putting logic to decide what to capitalize into nsLineBreaker. r=smontagu